fix: Fix loading spinners horizontal alignment.
Was off after upgrading to a new version of the spinners.

--- a/src/App.css
+++ b/src/App.css
@@ -68,10 +68,8 @@ a:visited {
   align-items: center;
 }
 
-.horizontallyCenter > div {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
+.horizontallyCenter {
+  justify-content: center;
 }
 
 .fillHeight {
